--- a/www/w3mir/Makefile
+++ b/www/w3mir/Makefile
@@ -1,10 +1,10 @@
 # New ports collection makefile for:    w3mir
-# http://www.sn.no/libwww-perl/
+# http://www.math.uio.no/~janl/w3mir/
 # Version required:                     1.0.2
 # Date created:                         9 May 1998
 # Whom:                                 ache
 #
-# $Id: Makefile,v 1.17 1998/04/28 14:45:37 vanilla Exp $
+# $Id: Makefile,v 1.1.1.1 1998/05/09 10:20:39 ache Exp $
 #
 
 DISTNAME=       w3mir-1.0.2
