--- a/converters/kdesupport2/Makefile
+++ b/converters/kdesupport2/Makefile
@@ -3,20 +3,25 @@
 # Date created:        28 October 1997
 # Whom:                Stefan Eßer <se@freebsd.org>
 #
-# $Id: Makefile,v 1.4 1998/02/22 21:10:00 se Exp $
+# $Id: Makefile,v 1.5 1998/03/06 19:52:09 se Exp $
 #
 
-DISTNAME=	kdesupport-Beta3-1
-PKGNAME=	kdesupport-3.1b
+DISTNAME=	kdesupport-beta4-1
+PKGNAME=	kdesupport-4.1b
 CATEGORIES=	x11 kde
 MASTER_SITES=	$(MASTER_SITE_KDE)
-MASTER_SITE_SUBDIR= stable/Beta3/distribution/tgz/source 
-EXTRACT_SUFX=	.src.tar.gz
+MASTER_SITE_SUBDIR= stable/Beta4/distribution/tgz/source 
+EXTRACT_SUFX=	.src.tar.bz2
 
 MAINTAINER=	se@freebsd.org
 
-BUILD_DEPENDS=	moc:${PORTSDIR}/x11/qt
+BUILD_DEPENDS=	bzip2:${PORTSDIR}/archivers/bzip2 \
+		moc:${PORTSDIR}/x11/qt
 LIB_DEPENDS=	qt\\.1\\.3[1-9]:${PORTSDIR}/x11/qt
+
+EXTRACT_CMD=	bzip2
+EXTRACT_BEFORE_ARGS= -cd
+EXTRACT_AFTER_ARGS= | tar -xf -
 
 HAS_CONFIGURE=	yes
 CONFIGURE_ARGS=	"--prefix=$(PREFIX)" \
