--- a/games/kdegames2/Makefile
+++ b/games/kdegames2/Makefile
@@ -3,30 +3,33 @@
 # Date created:        28 October 1997
 # Whom:                Stefan Eßer <se@freebsd.org>
 #
-# $Id: Makefile,v 1.7 1998/04/29 08:30:44 asami Exp $
+# $Id: Makefile,v 1.8 1998/05/04 20:22:51 jseger Exp $
 #
 
-DISTNAME=	kdegames-Beta3-1
-PKGNAME=	kdegames-3.1b
+DISTNAME=	kdegames-beta4-1
+PKGNAME=	kdegames-4.1b
 CATEGORIES=	games kde
 MASTER_SITES=	$(MASTER_SITE_KDE)
-MASTER_SITE_SUBDIR= stable/Beta3/distribution/tgz/source 
-EXTRACT_SUFX=	.src.tar.gz
+MASTER_SITE_SUBDIR= stable/Beta4/distribution/tgz/source 
+EXTRACT_SUFX=	.src.tar.bz2
 
 MAINTAINER=	se@freebsd.org
 
-BUILD_DEPENDS=	moc:${PORTSDIR}/x11/qt
+BUILD_DEPENDS=	bzip2:${PORTSDIR}/archivers/bzip2 \
+		moc:${PORTSDIR}/x11/qt
 LIB_DEPENDS=	qt\\.1\\.3[1-9]:${PORTSDIR}/x11/qt \
 		gif\\.[23]\\.:${PORTSDIR}/graphics/giflib \
 		jpeg\\.9\\.:${PORTSDIR}/graphics/jpeg \
-		kdecore\\.0\\.9[0-9]:${PORTSDIR}/x11/kdelibs \
+		kdecore\\.0\\.9[1-9]:${PORTSDIR}/x11/kdelibs \
 		kdeui\\.0\\.9[1-9]:${PORTSDIR}/x11/kdelibs \
 		jscript\\.0\\.9[0-9]:${PORTSDIR}/x11/kdelibs \
 		khtmlw\\.0\\.9[1-9]:${PORTSDIR}/x11/kdelibs \
 		kfm\\.0\\.9[0-9]:${PORTSDIR}/x11/kdelibs \
-		mediatool\\.0\\.[6-9]:${PORTSDIR}/x11/kdelibs
+		mediatool\\.0\\.9[1-9]:${PORTSDIR}/x11/kdelibs
 
-BROKEN=		upgrade
+EXTRACT_CMD=	bzip2
+EXTRACT_BEFORE_ARGS= -cd
+EXTRACT_AFTER_ARGS= | tar -xf -
 
 HAS_CONFIGURE=	yes
 CONFIGURE_ARGS=	"--prefix=$(PREFIX)" \
