--- a/mail/nmh/Makefile
+++ b/mail/nmh/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for:	nmh
-# Version required:     0.24
+# Version required:     0.25
 # Date created:		26 July 1997
 # Whom:			Scott Blachowicz <Scott.Blachowicz@seaslug.org>
 #
-# $Id: Makefile,v 1.6 1998/02/24 03:02:46 steve Exp $
+# $Id: Makefile,v 1.7 1998/04/27 04:27:44 mph Exp $
 #
 
-DISTNAME=	nmh-0.24
+DISTNAME=	nmh-0.25
 CATEGORIES=	mail
 MASTER_SITES=   ftp://ftp.math.gatech.edu/pub/nmh/
 
