--- a/audio/xmpeg3/Makefile
+++ b/audio/xmpeg3/Makefile
@@ -3,13 +3,13 @@
 # Date created:		7 July 1997
 # Whom:			doconnor@ist.flinders.edu.au
 #
-# $Id: Makefile,v 1.4 1998/02/21 22:38:11 fenner Exp $
+# $Id: Makefile,v 1.6 1998/03/20 14:35:28 tg Exp $
 #
 
 DISTNAME=	xmp3_1.0.0
 PKGNAME=	xmpeg3-1.0
 CATEGORIES=	audio tk80
-MASTER_SITES=	ftp://ftp.rasip.fer.hr/pub/mpeg/
+MASTER_SITES=	ftp://ftp.rasip.fer.hr/pub/sci/audio/mpeg/amp/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	ports@FreeBSD.ORG
